// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`molecules/NumericInput NumericInput should render 1`] = `
<div>
  <input
    class="tag tagTruncate"
    data-testid="numericInput"
    id="numeric input"
    inputmode="decimal"
    min="0.01"
    placeholder="Please, set exchange rate"
    rows="1"
    step="0.01"
    style="text-align: right;"
    type="number"
    value="23"
  />
</div>
`;

exports[`molecules/NumericInput NumericInput should render disabled state 1`] = `
<div>
  <input
    class="tag tagTruncate"
    data-testid="numericInput"
    disabled=""
    id="numeric input"
    inputmode="decimal"
    min="0.01"
    placeholder="Please, set exchange rate"
    rows="1"
    step="0.01"
    style="text-align: right;"
    type="number"
    value="23"
  />
</div>
`;
